fixing details page display on mobile

--- a/stylesd.css
+++ b/stylesd.css
@@ -98,7 +98,7 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
-    margin: 20px 100px 0px;
+    margin: 20px 20px 0px;
   }
 
   .title {
@@ -109,7 +109,7 @@
 
   .title img {
     margin-top: 20px;
-    width: 80%;
+    width: 450px;
     height: 400px;
   }
   
@@ -118,9 +118,10 @@
     margin-bottom: 40px;
     font-size: 20px;
     gap: 10px;
+    width: 450px;
   }
 
   .more p {
-    line-height: 35px;
+    line-height: 30px;
   }
  }
